--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".login">
+    tools:context=".Login">
 
    <RelativeLayout
        android:layout_width="match_parent"
@@ -69,11 +69,35 @@
     </LinearLayout>
     <EditText
 
+        android:id="@+id/etName"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint=" Name"
+        android:textSize="12sp"
+        android:textColorHint="#E72744"
+        />
+
+    <EditText
+
+        android:id="@+id/etNumber"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Mobile Number"
+        android:textSize="12sp"
+        android:textColorHint="#E72744"
+        />
+    <EditText
+
+        android:id="@+id/etPassword"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint=" Password"
         android:textSize="12sp"
         android:textColorHint="#E72744"
         />
@@ -88,6 +112,7 @@
         android:textColor="@color/black"
         />
         <Button
+            android:id="@+id/btnContinue"
             android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
