--- a/app/src/main/res/layout/activity_studio.xml
+++ b/app/src/main/res/layout/activity_studio.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="10dp"
+    android:orientation="vertical"
     android:elevation="10dp">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+
+
+
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -49,15 +60,16 @@
             android:layout_marginStart="10dp"
             android:paddingBottom="10dp"
             android:text=""
-            app:layout_constraintBottom_toTopOf="@id/imagePerson"
+            app:layout_constraintBottom_toTopOf="@id/imagePerfectFit"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvNameOfPerson" />
 
         <ImageView
-            android:id="@+id/imagePerson"
+            android:id="@+id/imagePerfectFit"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="450dp"
+            android:src="@drawable/kiara"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTimeAgo" />
@@ -70,7 +82,7 @@
             android:layout_margin="10dp"
             android:background="@drawable/ic_baseline_favorite_24"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imagePerson" />
+            app:layout_constraintTop_toBottomOf="@id/imagePerfectFit" />
 
         <View
             android:id="@+id/shareInStudio"
@@ -79,7 +91,7 @@
             android:layout_margin="10dp"
             android:background="@drawable/ic_baseline_share_24"
             app:layout_constraintStart_toEndOf="@id/LikePost"
-            app:layout_constraintTop_toBottomOf="@id/imagePerson" />
+            app:layout_constraintTop_toBottomOf="@id/imagePerfectFit" />
 
         <View
             android:clickable="true"
@@ -89,7 +101,7 @@
             android:layout_margin="10dp"
             android:background="@drawable/ic_baseline_bookmark_border_24"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imagePerson" />
+            app:layout_constraintTop_toBottomOf="@id/imagePerfectFit" />
 
         <TextView
             android:id="@+id/studioDescription"
@@ -106,5 +118,20 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    </ScrollView>
 
-</androidx.cardview.widget.CardView>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        app:labelVisibilityMode="labeled"
+        app:itemIconTint=" #E72744"
+        app:itemTextColor="#E72744"
+        app:menu="@menu/bottom_nav"
+        />
+
+
+</RelativeLayout>
